Working on the rush page

--- a/about.html
+++ b/about.html
@@ -36,11 +36,11 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel centerText" style="min-width: 960px; margin: 50px auto 25px auto; min-height: 500px;">
+<div class="posRel centerText" style="min-width: 960px; min-height: 500px;">
 
 
     <!-- Welcome Letter -->
-    <div class="inlineBlock roboto centerDiv vertAlignTop fontSize20 colBlack leftText" style="min-width: 480px; max-width: 900px;">
+    <div class="inlineBlock roboto centerDiv vertAlignTop fontSize20 colBlack leftText" style="min-width: 480px; max-width: 900px;margin: 50px auto 85px auto;">
 
         <!-- Title -->
         <div class="colRed amaranth fontSize36">About Sigma Phi Delta</div>
@@ -132,14 +132,6 @@
             <p>He should live life so that his actions shall never besmirch his own honor, and thus maintain the honor of the Engineering Profession."</p>
         </div>
 
-        <!-- SPD Crest -->
-        <div class="centerText" style="margin:30px auto 50px auto;">
-            <div class="insignia inlineBlock shadow backColWhite" style="width: 400px; padding: 15px 55px 25px 55px; height: 400px; border-radius: 50px;">
-                <img src="images/symbols/spdcoatofarms.jpg" height="100%" width="100%"/>
-                <div class="posRel colDarkRed" style="top: 35px;">Crest</div>
-            </div>
-        </div>
-
         <!-- Preamble -->
         <div>
             <div class="colRed amaranth fontSize28" style="">Preamble of the Constitution</div>
@@ -168,6 +160,14 @@
             <div class="posRel shadow inlineBlock backColWhite floatRight centerText" style="width: 200px; height: 150px; border-radius: 25px;">
                 <img src="images/symbols/spdpledgepin.jpg" width="150px" style="top: 10px;" class="posRel"/>
                 <div class="posAbs centerText width100 colDarkRed" style=" bottom: -35px;"><span>Pledge Pin</span></div>
+            </div>
+        </div>
+
+        <!-- SPD Crest -->
+        <div class="centerText" style="margin:30px auto 50px auto;">
+            <div class="insignia inlineBlock shadow backColWhite" style="width: 400px; padding: 15px 55px 25px 55px; height: 400px; border-radius: 50px;">
+                <img src="images/symbols/spdcoatofarms.jpg" height="100%" width="100%"/>
+                <div class="posRel colDarkRed" style="top: 35px;">Crest</div>
             </div>
         </div>
     </div>
