--- a/events.html
+++ b/events.html
@@ -28,30 +28,60 @@
 
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
+
+    <script>
+        $(window).on('load', function(){
+
+            $('#grid').masonry({
+                columnWidth: 1,
+                itemSelector: '.grid-item'
+
+            });
+        });
+
+    </script>
+    <style>
+        .event {
+            -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+            transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+        }
+
+        .event::after {
+            content: "";
+            border-radius: 5px;
+            position: absolute;
+            z-index: -1;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            opacity: 0;
+            -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+            transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+        }
+
+        .event:hover {
+            -webkit-transform: scale(1.25, 1.25);
+            transform: scale(1.25, 1.25);
+            z-index: 10;
+        }
+
+        .event:hover::after {
+            opacity: 1;
+        }
+    </style>
 </head>
 
-<body class="posRel" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0;">
+<body class="posRel width100 height100 overflowXHidden backColBackGround marg0 pad0">
 <!-- Header -->
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel roboto" style="font-size: 20px; min-width: 900px; margin: 30px auto 25px auto; min-height: 700px; height: 100%;max-width: 70%;">
+<div class="posRel roboto height100 fontSize20" style=" min-width: 900px; margin: 30px auto 25px auto; min-height: 700px;max-width: 70%;">
 
     <!-- Upcoming Event Boxes -->
     <div id="grid"   class="posRel" style="min-height: 900px;">
-        <!-- Event
-        <div class=" backColWhite shadow grid-item" style="padding: 8px; margin: 15px; border-radius: 5px;">
-            <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 24px;">Bubble Tea Fundraiser</div>
-            <div class="opensans" style="font-size: 18px; color: black;">
-                <span style="">January 22nd @ 7pm</span>
-                <span style="margin: auto 15px;">&middot;</span>
-                <span style="">Cardozo Lounge</span>
-            </div>
-            <img src="fliers/fall2015/bubbletea.jpg" width="100%" style="margin: 10px auto;">
-            <div class="opensans" style="font-size: 19px; color: black;">
-                All proceeds go to relay for life
-            </div>
-        </div>-->
 
         <!-- Event -->
         <div class="grid-item event shadow">
@@ -78,70 +108,10 @@
         </div>
 
     </div>
-
-
 </div>
 
 <!-- Footer -->
 <div id="footer"></div>
 
-<!--
-<div>
-Icons made by<a href="http://www.freepik.com" title="Freepik">Freepik</a>
-from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
-is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
-</div>
- -->
 </body>
 </html>
-<script>
-    $(document).ready( function() {
-
-
-        $('#header').load("header.html");
-        $('#footer').load("footer.html");
-    });
-
-</script>
-<script>
-    $(window).on('load', function(){
-
-        $('#grid').masonry({
-            columnWidth: 1,
-            itemSelector: '.grid-item'
-
-        });
-    });
-
-</script>
-<style>
-    .event {
-        -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-        transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    }
-
-    .event::after {
-        content: "";
-        border-radius: 5px;
-        position: absolute;
-        z-index: -1;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-        opacity: 0;
-        -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-        transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    }
-
-    .event:hover {
-        -webkit-transform: scale(1.25, 1.25);
-        transform: scale(1.25, 1.25);
-        z-index: 10;
-    }
-
-    .event:hover::after {
-        opacity: 1;
-    }
-</style>
