--- a/rush.html
+++ b/rush.html
@@ -21,6 +21,27 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
+    <style>
+        strong{
+            color: #DB2B2A;
+            font-weight:normal;
+        }
+        @media only screen and (max-width: 699px) {
+            #rushflier {
+                float: none;
+                display: block;
+                width: 80%;
+                height: 90%;
+                border: 1px solid red;
+            }
+        }
+        .circShadow{
+            -webkit-box-shadow: 0 10px 10px 0 #464646;
+            -moz-box-shadow: 0 10px 10px 0 #464646;
+            box-shadow: 0 10px 10px 0 #464646;
+        }
+    </style>
+
 </head>
 
 <body class="posRel width100 height100 overflowXHidden backColBackGround marg0 pad0">
@@ -29,7 +50,7 @@
 
 
 <!-- Content -->
-<div class="posRel roboto fontSize20 " style=" min-width: 900px; margin: 20px auto 25px auto; text-align: left; min-height: 500px; width: 60%;">
+<div class="posRel roboto fontSize20 leftText" style="min-width: 900px; margin: 20px auto 55px auto;min-height: 500px; width: 60%;">
 
     <!-- Introduction -->
     <div>
@@ -37,13 +58,13 @@
         <div class="inlineBlock amaranth colRed fontSize36" style="margin: 20px 0 15px 0;">Why rush Sigma Phi Delta?</div>
 
         <!-- List of Rush Events -->
-        <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop pad0" style="margin-top:30px; width: 500px; height: 300px; margin-left: 25px; text-align: left;border: 5px solid #191919;">
+        <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop pad0 leftText" style="width: 600px; height: 222px; margin-left: 25px;border: 5px solid #191919;">
             <!-- Rush Flier -->
             <img src="images/fliers/spring2016/rush.png" height="100%" width="100%"/>
         </div>
 
         <!-- Introduction Paragraph -->
-        <div class="fontSize16" style="margin-bottom: 95px;line-height: 26px;">
+        <div class="fontSize16 lineHeigh16" style="margin-bottom: 95px;">
             As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
             <strong>"work hard, play hard"</strong> mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
             both a social and professional organization. Rush is an excellent opportunity in which anyone interested in
@@ -53,16 +74,17 @@
     </div>
 
     <!-- Academic Benefits -->
-    <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
-        <div class="centerText vertAlignTop colWhite inlineBlock " style="height: 300px; width: 300px;">
+    <div class="centerVert">
+
+        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
             <div class="colWhite bordRad50 height100 width100 circShadow" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
                 <div>
-                    <img src="icons/academics.png" height="150px" width="150px" class="block centerDiv"/>
-                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Academic Benefits</div>
+                    <img src="icons/academics.png" height="175px" width="150px" class="block centerDiv"/>
+                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Academic Benefitsgit </div>
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%; line-height: 26px;">
+        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%;">
             No one can truly understand the full perils and workload of a major except those within the major. The members of
             Sigma Phi Delta are all within CEAS (College of Engineering and Applied Sciences), covering a solid breathe of its
             encompassing majors. Members benefit from working along side one another <strong>garnering homework help, study aid, advice
@@ -74,8 +96,8 @@
     </div>
 
     <!-- Professional Benefits -->
-    <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
-        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%; line-height: 28px;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
+    <div class="centerVert" style="margin: 55px 0 0 0;">
+        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
             As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
             professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
             STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
@@ -92,7 +114,7 @@
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
             <div class="colWhite bordRad50 height100 width100 circShadow" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
                 <div>
-                    <img src="icons/professional5.png" height="150px" width="150px" class="block centerDiv"/>
+                    <img src="icons/professional5.png" height="175px" width="150px" class="block centerDiv"/>
                     <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Professional Benefits</div>
                 </div>
             </div>
@@ -101,7 +123,7 @@
 
 
     <!-- Social Benefits -->
-    <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
+    <div class="centerVert" style="margin: 55px 0 0 0;">
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
             <div class="colWhite bordRad50 height100 width100 circShadow" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
                 <div>
@@ -137,52 +159,10 @@
             </div>
         </div>
     </div>
-    <div style="height: 30px;"></div>
 
 </div>
 
 <!-- Footer -->
 <div id="footer"></div>
-
-<!--
-<div>
-Icons made by<a href="http://www.freepik.com" title="Freepik">Freepik</a>
-from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
-is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
-</div>
- -->
 </body>
 </html>
-<script>
-    $(document).ready(function(){
-        $('#header').load("header.html");
-        $('#footer').load("footer.html");
-    });
-</script>
-<script>
-    $(document).on('page:load', function() {
-        $('#header').load("header.html");
-        $('#footer').load("footer.html");
-    });
-</script>
-
-<style>
-    strong{
-        color: #DB2B2A;
-        font-weight:normal;
-    }
-    @media only screen and (max-width: 699px) {
-        #rushflier {
-            float: none;
-            display: block;
-            width: 80%;
-            height: 90%;
-            border: 1px solid red;
-        }
-    }
-    .circShadow{
-        -webkit-box-shadow: 0 10px 10px 0 #464646;
-        -moz-box-shadow: 0 10px 10px 0 #464646;
-        box-shadow: 0 10px 10px 0 #464646;
-    }
-</style>
