--- a/rush.html
+++ b/rush.html
@@ -50,21 +50,21 @@
 
 
 <!-- Content -->
-<div class="posRel roboto fontSize20 leftText" style="min-width: 900px; margin: 20px auto 55px auto;min-height: 500px; width: 60%;">
+<div class="posRel roboto fontSize20 leftText" style="min-width: 900px; margin: 30px auto 55px auto;min-height: 500px; width: 60%;">
 
     <!-- Introduction -->
-    <div>
+    <div style="margin: 20px 0 75px 0;">
         <!-- Title -->
-        <div class="inlineBlock amaranth colRed fontSize36" style="margin: 20px 0 15px 0;">Why rush Sigma Phi Delta?</div>
+        <div class="inlineBlock amaranth colRed fontSize36">Why rush Sigma Phi Delta?</div>
 
         <!-- List of Rush Events -->
-        <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop pad0 leftText" style="width: 600px; height: 222px; margin-left: 25px;border: 5px solid #191919;">
+        <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop pad0 leftText" style="width: 600px; height: 222px; margin: 15px 0 0 25px;border: 5px solid #191919;">
             <!-- Rush Flier -->
             <img src="images/fliers/spring2016/rush.png" height="100%" width="100%"/>
         </div>
 
         <!-- Introduction Paragraph -->
-        <div class="fontSize16 lineHeigh16" style="margin-bottom: 95px;">
+        <div class="fontSize16 lineHeight24" style="margin-top: 15px;">
             As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
             <strong>"work hard, play hard"</strong> mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
             both a social and professional organization. Rush is an excellent opportunity in which anyone interested in
@@ -74,17 +74,17 @@
     </div>
 
     <!-- Academic Benefits -->
-    <div class="centerVert">
+    <div class="centerVertHorz">
 
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100 circShadow" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+            <div class="colWhite bordRad50 height100 width100 circShadow backColRed"  style="display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="icons/academics.png" height="175px" width="150px" class="block centerDiv"/>
-                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Academic Benefitsgit </div>
+                    <div class="amaranth fontSize20" style="height: 50px;padding-top: 5px;">Academic Benefits</div>
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 0 25px;width: 70%;">
             No one can truly understand the full perils and workload of a major except those within the major. The members of
             Sigma Phi Delta are all within CEAS (College of Engineering and Applied Sciences), covering a solid breathe of its
             encompassing majors. Members benefit from working along side one another <strong>garnering homework help, study aid, advice
@@ -96,8 +96,8 @@
     </div>
 
     <!-- Professional Benefits -->
-    <div class="centerVert" style="margin: 55px 0 0 0;">
-        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
+    <div class="centerVertHorz" style="margin: 55px 0 0 0;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 0 25px;width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
             As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
             professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
             STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
@@ -112,10 +112,10 @@
             job market, who you know is just as important as what you know.-->
         </div>
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100 circShadow" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+            <div class="colWhite bordRad50 height100 width100 circShadow backColRed" style="display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="icons/professional5.png" height="175px" width="150px" class="block centerDiv"/>
-                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Professional Benefits</div>
+                    <div class="amaranth fontSize20" style="height: 50px;padding-top: 5px;">Professional Benefits</div>
                 </div>
             </div>
         </div>
@@ -123,16 +123,16 @@
 
 
     <!-- Social Benefits -->
-    <div class="centerVert" style="margin: 55px 0 0 0;">
+    <div class="centerVertHorz" style="margin: 55px 0 0 0;">
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100 circShadow" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+            <div class="colWhite bordRad50 height100 width100 circShadow backColRed" style="display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="icons/crowd.png" height="150px" width="150px" class="block centerDiv"/>
-                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Social Benefits</div>
+                    <div class="amaranth fontSize20" style="height: 50px;padding-top: 5px;">Social Benefits</div>
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%; line-height: 28px;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 0 25px;width: 70%; line-height: 28px;">
             While we highly hold the beliefs of strong academics and profession success we also fully understand the importance
             of experiencing the social opportunities university has to offer, as we are only here for so long. Sigma Phi Delta
             engages in a broad spectrum of social activities such as <strong>intramural sports, collaborated events, tailgates</strong>, and participation
@@ -142,8 +142,8 @@
     </div>
 
     <!-- Brotherhood -->
-    <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
-        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%; line-height: 28px;">
+    <div class="centerVertHorz" style="margin: 55px 0 0 0;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 0 25px;width: 70%; line-height: 28px;">
             The most important aspect of Sigma Phi Delta; however, is its <strong>close-knit, diverse brotherhood</strong>. The men of Sigma Phi
                 Delta come from all corners of the country, as well as different areas of the world. Being a member of Sigma Phi
                 Delta not only gives you people to study and hang out with, but gives you <strong>friendships that last a lifetime</strong>
@@ -151,10 +151,10 @@
             Being a member of Sigma Phi Delta not only alters a man's college experience, but also positively affects the rest of their life.
         </div>
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100 circShadow" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+            <div class="colWhite bordRad50 height100 width100 circShadow backColRed" style="display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="images/symbols/spdgearlogo.png" height="175px" width="150px" class="block centerDiv"/>
-                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Brotherhood</div>
+                    <div class="amaranth fontSize20" style="height: 50px;padding-top: 5px;">Brotherhood</div>
                 </div>
             </div>
         </div>
