Most refractoring done

--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
         </a>
 
         <!-- Subtitle -->
-        <div class="posRel adam centerText" style="font-size: 26px; color:#F7302F; text-align: center; ">
+        <div class="posRel adam centerText colRed fontSize26">
             Beta - Eta Chapter
             &middot;
             SUNY
