--- a/events.html
+++ b/events.html
@@ -29,17 +29,10 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
-    <script>
-        $(window).on('load', function(){
+    <!-- Masonry -->
+    <script src="js/masonry.pkgd.min.js"></script>
 
-            $('#grid').masonry({
-                columnWidth: 1,
-                itemSelector: '.grid-item'
-
-            });
-        });
-
-    </script>
+    <!-- Events Page Specific Styling -->
     <style>
         .event {
             -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -78,10 +71,10 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel roboto height100 fontSize20" style=" min-width: 900px; margin: 30px auto 25px auto; min-height: 700px;max-width: 70%;">
+<div class="posRel roboto height100 fontSize20" style="min-width: 900px; margin: 30px auto 25px auto; min-height: 700px;max-width: 70%;">
 
     <!-- Upcoming Event Boxes -->
-    <div id="grid"   class="posRel" style="min-height: 900px;">
+    <div id="masonryGrid"   class="posRel" style="min-height: 900px;">
 
         <!-- Event -->
         <div class="grid-item event shadow">
@@ -111,7 +104,6 @@
 </div>
 
 <!-- Footer -->
-<div id="footer"></div>
-
+<div id="footer" class="posAbs"></div>
 </body>
 </html>
