--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
     <div class="shadowTop" style="">
         <div style="width: 960px; margin: 0 auto;">
             <div class="posRel centerDiv" style="width: 90%; height: 80px;">
-                <div class="posRel inlineBlock width100 centerText" style="font-family: Adam; line-height: 80px; color: #F7302F; font-size: 18px;">
+                <div class="posRel inlineBlock width100 centerText adam colRed fontSize18" style="line-height: 80px;">
 
                     <div class="inlineBlock posAbs" style="left: -10px;">
 
@@ -11,7 +11,7 @@
 
                         <!-- Link to SBU CEAS -->
                         <a href="http://www.stonybrook.edu/commcms/ceas/">
-                            <div class="z2 inlineBlock posRel" style="height: 22px; width: 22px; vertical-align: middle; overflow: hidden; bottom: 2px;margin: 0 20px;">
+                            <div class="z2 inlineBlock posRel vertAlignMid overflowHidden" style="height: 22px; width: 22px; bottom: 2px;margin: 0 20px;">
                                 <img src="images/symbols/sbu1.png" height="22px" style="vertical-align: top; color: red;"/>
                             </div>
                         </a>
@@ -19,7 +19,7 @@
 
                     <span style="margin: 0 20px;">&middot;</span>
                     THE PREMIER INTERNATIONAL
-                    <span class="posRel" style="font-size: 38px; vertical-align: middle; top: 2px; padding: 0 5px;">&Sigma;&Phi;&Delta;</span>
+                    <span class="posRel vertAlignMid" style="font-size: 38px;top: 2px; padding: 0 5px;">&Sigma;&Phi;&Delta;</span>
                     FRATERNITY OF ENGINEERS
                     <span style="margin: 0 20px;">&middot;</span>
 
