--- a/members.html
+++ b/members.html
@@ -32,9 +32,11 @@
     <!-- Masonry -->
     <script src="js/masonry.pkgd.min.js"></script>
 
+    <!-- Javascript for Members Page -->
     <script type="text/javascript">
 
-
+        // Parses a google spreadsheet and dynamically creates HTML elements with information from the spreadsheet
+        //      Modified
         var spData = null;
         function doData(json) {
             spData = json.feed.entry;
@@ -222,6 +224,8 @@
             readData($("#data"));
 
         });
+
+        // For the loading gif
         document.onreadystatechange = function () {
             var state = document.readyState;
             if (state == 'interactive') {
@@ -237,14 +241,43 @@
     </script>
     <script src="https://spreadsheets.google.com/feeds/cells/1ZzVZpDJh6x55HRXbUJpfrdHFPyQDzU05eIN1RJe43ds/1/public/values?alt=json-in-script&callback=doData"></script>
 
+    <!-- Javascript for highlight events for members -->
+    <script>
+        /*
+         $(window).bind("load", function() {
+         $('.categ').mouseenter(function(){
+         /*alert($(this).find('.cmCont').text());
+         var val = $(this).find('.cmCont').text();
+         var elements = document.getElementsByClassName('.cmCont');
+         alert(elements.length);
+         for(var i=0;i<elements.length;i++){
+         if(elements[i].text() != val){
+         alert('heel');
+         elements[i].parent('.grid-item').css('display','none');
+         }
+         }
+         });
+         });
+         */
+    </script>
+
+    <!-- Styling to resize the page for different columns of members shown -->
+    <style>
+        @media all and (min-width:300px) {  #membersContainer{  width: 300px;  }   #load{left:-5%;} }
+        @media all and (min-width:600px) {  #membersContainer{  width: 590px;  }   #load{left: -3%;}  }
+        @media all and (min-width:900px) {  #membersContainer{  width: 880px;  }   #load{left: 0;}  }
+        @media all and (min-width:1200px) {  #membersContainer{  width: 1170px;  } #load{left: 13%;}   }
+        @media all and (min-width:1500px) {  #membersContainer{  width: 1460px;  } #load{left: 19%;}  }
+        @media all and (min-width:1800px) {  #membersContainer{  width: 1750px;  } #load{left: 25%;}  }x
+    </style>
 </head>
 
-<body id="pageone" class="posRel" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0">
+<body id="pageone" class="posRel width100 height100 overflowXHidden backColBackground pad0 marg0">
 <!-- Header -->
 <div id="header"></div>
 
 <!-- Content -->
-<div id="membersContainer" class="posRel" style="margin: 35px auto 25px auto; text-align: center; min-height: 530px;">
+<div id="membersContainer" class="posRel centerText" style="margin: 35px auto 25px auto; min-height: 530px;">
 
     <div id="load">
         <img src="images/symbols/loading.gif" height="200px" width="200px"/>
@@ -252,72 +285,15 @@
 
     <div id="contents">
         <!-- I don't know why this needs a padding left -> Added bordRed, evens out the DIV -->
-        <div id="data" class="centerText centerDiv" style="padding: 0 0 0 3px;"></div>
+        <div id="masonryGrid" class="centerText centerDiv" style="padding: 0 0 0 3px;"></div>
     </div>
 
 </div>
 
 <!-- Footer -->
-<div id="footer"></div>
+<div id="footer" class="posAbs"></div>
 </body>
 </html>
 
 
-<script>
-    $(document).ready(function(){
-        $('#header').load("header.html");
-        $('#footer').load("footer.html");
-
-
-    });
-
-
-</script>
-
-<script>
-    $(document).on('page:load', function() {
-        $('#header').load("header.html");
-        $('#footer').load("footer.html");
-
-
-    });
-</script>
-
-<script>
-    $(window).on('load', function(){
-
-        $('#data').masonry({
-            columnWidth: 1,
-            itemSelector: '.grid-item'
-
-        });
-    });
-</script>
-
-<script>
-    /*
-    $(window).bind("load", function() {
-        $('.categ').mouseenter(function(){
-            /*alert($(this).find('.cmCont').text());
-            var val = $(this).find('.cmCont').text();
-            var elements = document.getElementsByClassName('.cmCont');
-            alert(elements.length);
-            for(var i=0;i<elements.length;i++){
-                if(elements[i].text() != val){
-                    alert('heel');
-                    elements[i].parent('.grid-item').css('display','none');
-                }
-            }
-        });
-    });
-    */
-</script>
-<style>
-    @media all and (min-width:300px) {  #membersContainer{  width: 300px;  }   #load{left:-5%;} }
-    @media all and (min-width:600px) {  #membersContainer{  width: 590px;  }   #load{left: -3%;}  }
-    @media all and (min-width:900px) {  #membersContainer{  width: 880px;  }   #load{left: 0;}  }
-    @media all and (min-width:1200px) {  #membersContainer{  width: 1170px;  } #load{left: 13%;}   }
-    @media all and (min-width:1500px) {  #membersContainer{  width: 1460px;  } #load{left: 19%;}  }
-    @media all and (min-width:1800px) {  #membersContainer{  width: 1750px;  } #load{left: 25%;}  }x
-</style>
 
