--- a/rush.html
+++ b/rush.html
@@ -2,11 +2,19 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Sigma Phi Delta at Stony Brook at Stony Brook</title>
+    <!-- Title for the tab in browser -->
+    <title>Sigma Phi Delta</title>
+
+    <!-- Logo for the tab in browser -->
     <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
+    <!-- Jquery Plugin -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+    <!-- Load in the javascript file -->
     <script language="javascript" type="text/javascript" src="js/index.js"></script>
+
+    <!-- Load in the CSS file -->
     <link rel="stylesheet" type="text/css" href="css/index.css">
 
     <!-- Fonts -->
@@ -36,9 +44,9 @@
             }
         }
         .circShadow{
-            -webkit-box-shadow: 0 10px 10px 0 #464646;
-            -moz-box-shadow: 0 10px 10px 0 #464646;
-            box-shadow: 0 10px 10px 0 #464646;
+            -webkit-box-shadow: 0 5px 10px 0 #464646;
+            -moz-box-shadow: 0 5px 10px 0 #464646;
+            box-shadow: 0 5px 10px 0 #464646;
         }
     </style>
 
@@ -53,18 +61,18 @@
 <div class="posRel roboto fontSize20 leftText" style="min-width: 900px; margin: 30px auto 55px auto;min-height: 500px; width: 60%;">
 
     <!-- Introduction -->
-    <div style="margin: 20px 0 75px 0;">
+    <div style="margin: 20px 0 55px 0;">
         <!-- Title -->
         <div class="inlineBlock amaranth colRed fontSize36">Why rush Sigma Phi Delta?</div>
 
         <!-- List of Rush Events -->
-        <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop pad0 leftText" style="width: 600px; height: 222px; margin: 15px 0 0 25px;border: 5px solid #191919;">
+        <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop pad0 leftText" style="width: 600px; height: 222px; margin: 25px 0 0 25px;border: 5px solid #191919;">
             <!-- Rush Flier -->
             <img src="images/fliers/spring2016/rush.png" height="100%" width="100%"/>
         </div>
 
         <!-- Introduction Paragraph -->
-        <div class="fontSize16 lineHeight24" style="margin-top: 15px;">
+        <div class="fontSize16 lineHeight24" style="margin-top: 25px;">
             As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
             <strong>"work hard, play hard"</strong> mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
             both a social and professional organization. Rush is an excellent opportunity in which anyone interested in
@@ -74,8 +82,7 @@
     </div>
 
     <!-- Academic Benefits -->
-    <div class="centerVertHorz">
-
+    <div class="centerVert rightText">
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
             <div class="colWhite bordRad50 height100 width100 circShadow backColRed"  style="display:flex;justify-content:center;align-items:center;">
                 <div>
@@ -96,7 +103,7 @@
     </div>
 
     <!-- Professional Benefits -->
-    <div class="centerVertHorz" style="margin: 55px 0 0 0;">
+    <div class="centerVert leftText" style="margin: 55px 0 0 0;border: 2px solid #F7302F;border-radius: 5px 225px 225px 5px;">
         <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 0 25px;width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
             As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
             professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
@@ -123,7 +130,7 @@
 
 
     <!-- Social Benefits -->
-    <div class="centerVertHorz" style="margin: 55px 0 0 0;">
+    <div class="centerVert rightText" style="margin: 55px 0 0 0;">
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
             <div class="colWhite bordRad50 height100 width100 circShadow backColRed" style="display:flex;justify-content:center;align-items:center;">
                 <div>
@@ -142,8 +149,8 @@
     </div>
 
     <!-- Brotherhood -->
-    <div class="centerVertHorz" style="margin: 55px 0 0 0;">
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 0 25px;width: 70%; line-height: 28px;">
+    <div class="centerVert leftText" style="margin: 55px 0 0 0;border: 2px solid #F7302F;border-radius: 5px 225px 225px 5px;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24" style="padding: 0 25px;width: 70%; line-height: 32px;">
             The most important aspect of Sigma Phi Delta; however, is its <strong>close-knit, diverse brotherhood</strong>. The men of Sigma Phi
                 Delta come from all corners of the country, as well as different areas of the world. Being a member of Sigma Phi
                 Delta not only gives you people to study and hang out with, but gives you <strong>friendships that last a lifetime</strong>
@@ -159,10 +166,9 @@
             </div>
         </div>
     </div>
-
 </div>
 
 <!-- Footer -->
-<div id="footer"></div>
+<div id="footer" class="posAbs"></div>
 </body>
 </html>
