Fixed a js bug where js was breaking because masonry wasn't being called

--- a/events.html
+++ b/events.html
@@ -64,6 +64,17 @@
             opacity: 1;
         }
     </style>
+
+    <!-- Masonry -->
+    <script>
+        $(document).ready(function(){
+            // Masonry Grid
+            $('#masonryGrid').masonry({
+                columnWidth: 1,
+                itemSelector: '.grid-item'
+            });
+        })
+    </script>
 </head>
 
 <body class="posRel width100 height100 overflowXHidden backColBackGround marg0 pad0">
@@ -71,7 +82,7 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel roboto height100 fontSize20" style="min-width: 900px; margin: 30px auto 25px auto; min-height: 700px;max-width: 70%;">
+<div class="posRel roboto height100 fontSize20" style="min-width: 900px; margin: 40px auto 25px auto; min-height: 700px;max-width: 70%;">
 
     <!-- Upcoming Event Boxes -->
     <div id="masonryGrid"   class="posRel" style="min-height: 900px;">
