--- a/mobile.html
+++ b/mobile.html
@@ -48,7 +48,7 @@
 
 </head>
 
-<body id="pageone" class="posRel centerText" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0; ">
+<body id="pageone" class="posRel centerText width100 height100 overflowXHidden backColBackGround marg0 pad0">
 <!-- Header -->
 <div id="header"></div>
 
@@ -65,7 +65,7 @@
 </div>
 
 <!-- Content -->
-<div class="posRel shadow overflowHidden" style="bottom: 0;width: 530px; margin:25px auto 0 auto; text-align: center; height: 400px;border: 10px solid #464646;">
+<div class="posRel shadow overflowHidden centerText" style="bottom: 0;width: 530px; margin:25px auto 0 auto; height: 400px;border: 10px solid #464646;">
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow" class="slideshow inlineBlock vertAlignTop" style="">
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
