Gone over major refractoring. Testing pages

--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
 
         <!-- Preamble -->
         <div>
-            <div class="colRed amaranth fontSize28" style="">Preamble of the Constitution</div>
+            <div class="colRed amaranth fontSize28">Preamble of the Constitution</div>
 
             <p>In order to advance the interests of the Engineering Profession and to create a greater spirit of cooperation and
                 Brotherhood among the students, faculty and alumni of the various colleges and universities of the world, we do
@@ -150,7 +150,7 @@
             </div>
 
             <!-- SPD Flag -->
-            <div class="posRel inlineBlock centerText" style="">
+            <div class="posRel inlineBlock centerText">
                 <div class="colRed amaranth fontSize28">Motto</div>
                 <div>"Pro Bono Professionis"</div>
                 <div>For the good of the profession.</div>
@@ -159,7 +159,7 @@
             <!-- SPD Pledge Pin -->
             <div class="posRel shadow inlineBlock backColWhite floatRight centerText" style="width: 200px; height: 150px; border-radius: 25px;">
                 <img src="images/symbols/spdpledgepin.jpg" width="150px" style="top: 10px;" class="posRel"/>
-                <div class="posAbs centerText width100 colDarkRed" style=" bottom: -35px;"><span>Pledge Pin</span></div>
+                <div class="posAbs centerText width100 colDarkRed" style="bottom: -35px;"><span>Pledge Pin</span></div>
             </div>
         </div>
 
