--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
                         <!-- Link to SBU CEAS -->
                         <a href="http://www.stonybrook.edu/commcms/ceas/">
                             <div class="z2 inlineBlock posRel vertAlignMid overflowHidden" style="height: 22px; width: 22px; bottom: 2px;margin: 0 20px;">
-                                <img src="images/symbols/sbu1.png" height="22px" style="vertical-align: top; color: red;"/>
+                                <img src="images/symbols/sbu1.png" height="22px" class="vertAlignTop colorRed" />
                             </div>
                         </a>
                     </div>
