--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
             box-shadow: 0 0 15px 0 rgba(38,38,38,1);
         }
     </style>
-
 </head>
 
 <body id="pageone" class="posRel width100 height100 overflowXHidden marg0 pad0 backColBackGround">
@@ -142,8 +141,8 @@
 <!-- Content -->
 <div class="posRel width100 centerText overflowHidden width100" style="min-height: 453px;">
 
-    <div id="ssCont" class="posRel" style="">
-        <div id="slideshowBorder" style=""></div>
+    <div id="ssCont" class="posRel">
+        <div id="slideshowBorder"></div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow7" class="slideshow inlineBlock vertAlignTop ">
@@ -154,11 +153,11 @@
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" /></div>
-            <div class="blackOverlay" style=""></div>
+            <div class="blackOverlay"></div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow1" class="slideshow inlineBlock vertAlignTop ">
+        <div id="slideshow1" class="slideshow inlineBlock vertAlignTop">
             <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" /></div>
@@ -166,10 +165,10 @@
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" /></div>
-            <div class="blackOverlay" style=""></div>
+            <div class="blackOverlay"></div>
         </div>
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow2" class="slideshow inlineBlock vertAlignTop ">
+        <div id="slideshow2" class="slideshow inlineBlock vertAlignTop">
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" /></div>
@@ -185,11 +184,11 @@
                         success</strong> while enriching the college experience for engineering students.
                 </div>
             </div>
-            <div class="blackOverlay" style=""></div>
+            <div class="blackOverlay"></div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow3" class="slideshow inlineBlock vertAlignTop ">
+        <div id="slideshow3" class="slideshow inlineBlock vertAlignTop">
             <div class="posAbs backColBackGround width100" style="height: 50px; top: -25px; z-index:10;"></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" /></div>
@@ -202,7 +201,7 @@
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow4" class="slideshow inlineBlock vertAlignTop ">
+        <div id="slideshow4" class="slideshow inlineBlock vertAlignTop">
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" /></div>
@@ -218,14 +217,14 @@
                 </div>
 
                 <a href="rush.html" class="textDecNone">
-                    <div id="rushBtn" class="vertAlignTop centerText inlineBlock" style="">SPRING RUSH 2016</div>
+                    <div id="rushBtn" class="vertAlignTop centerText inlineBlock">SPRING RUSH 2016</div>
                 </a>
             </div>
-            <div class="blackOverlay" style=""></div>
+            <div class="blackOverlay"></div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow5" class="slideshow inlineBlock vertAlignTop " style="">
+        <div id="slideshow5" class="slideshow inlineBlock vertAlignTop">
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" /></div>
@@ -233,12 +232,12 @@
             <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" /></div>
-            <div class="blackOverlay" style=""></div>
+            <div class="blackOverlay"></div>
 
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow6" class="slideshow inlineBlock vertAlignTop ">
+        <div id="slideshow6" class="slideshow inlineBlock vertAlignTop">
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" /></div>
@@ -246,7 +245,7 @@
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" /></div>
-            <div class="blackOverlay" style=""></div>
+            <div class="blackOverlay"></div>
         </div>
     </div>
 </div>
